<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="aleksandrov.aleksandr.shopping.authorization.RegistrationFragment">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrap_reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/reg_username"
                      android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                      android:inputType="textFilter"
                      android:hint="@string/username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrap_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText android:id="@+id/reg_password"
                      android:hint="@string/password"
                      android:layout_width="match_parent"
                      android:inputType="textPassword"
                      android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrap_reg_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText android:id="@+id/reg_confirm_password"
                      android:hint="@string/confirm_password"
                      android:layout_width="match_parent"
                      android:inputType="textPassword"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>