<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="aleksandrov.aleksandr.shopping.authorization.AuthorizationFragment">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrap_auth_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/auth_username"
                      android:hint="@string/username"
                      android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                      android:inputType="textFilter"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrap_auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText android:id="@+id/auth_password"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_log_in"
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>